Informations personnelle, choix du sujet

--- a/about.Rmd
+++ b/about.Rmd
@@ -1,8 +1,16 @@
 ---
 title: "About me"
 ---
+Ver Hoeye  
+Killian  
+Ms Bouchet  
+Bac 2 Biology  
+Group 5  
+Academic year:2019-2020  
+The rising of sea level  
 
 
-This section also must include: 
 
-- first name/surname, teacher’s name, class name and academic year
+ 
+
+- 
