--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Everything you need to know about elephants"
+title: "Everything you need to know about seas level rising"
 site: distill::distill_website
 listing: posts
 ---
