--- a/about.Rmd
+++ b/about.Rmd
@@ -7,7 +7,7 @@ Teacher: Ms Bouchet
 Classroom: Bac 2 Biology  
 Group: 5  
 Academic year: 2019-2020  
-__Topic of this blog__: The seas level rising  
+__Topic of this blog__: The seas level rise  
 
 
 
