--- a/_posts/2019-09-18-article-1/article-1.Rmd
+++ b/_posts/2019-09-18-article-1/article-1.Rmd
@@ -14,6 +14,7 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
+
 https://www.scientificamerican.com/article/alarming-sonar-results-show-glaciers-may-be-melting-faster-than-we-expected/
 
 ## Vocabulary 
@@ -47,8 +48,8 @@ https://www.scientificamerican.com/article/alarming-sonar-results-show-glaciers-
 | ---------------------------- | ------------------------------------------------------------------- |
 | Researchers                  | Dave Shuterland, lead study author and oceanograph at the University of Oregon (U.S.A)                     |
 | Published in?                | 07/26/2019                                                       |
-| General topic?               | Scientics carried out a study to examine and to understand the melting of glaciers in Alaska.               |
-| Procedure/what was examined? | Thanks to a GPS that collected information about deplacement of glaciers and to a multibeam sonar that collected readings about the temperature and the salinity of the water but also about the flow around the glacier, the sientifics were able to examine where and how on a glacier the most melting occurs. They spent few days on a boat in an iceber-strewn water to carry out their researches. They used a multibeam sonar because it was dangerous to recolte data on the glacier. In deed, it could break at any time. |
+| General topic?               | Scientifics carried out a study to examine and to understand the melting of glaciers in Alaska.               |
+| Procedure/what was examined? | Thanks to a GPS and a multibeam sonar that collected information about deplacement of glaciers, the temperature and the salinity of the water but also about the flow around the glacier, the sientifics were able to examine where and how on a glacier the most melting occurs. They spent few days on a boat in an iceber-strewn water to carry out their researches. They used a multibeam sonar because it was dangerous to recolte data on the glacier. In deed, it could break at any time. |
 | Conclusions/discovery?       | The scientifcs found that glaciers are melting 10 to 100 times faster than the pervious theories had suggested. With regard to the place where the most of the melting occurs, they found that happens beneath the waterline. But the speed of this process is increased because of the meltwater on the glacier's surface. This meltwater flows across cracks and creates a stream under the glacier so it's arrives faster in the ocean and melts faster too. This process has implications for seas level rise and that's threatening all coastal cities.          |
 | Remaining questions?         | They found variations across the face of the glacier that suggested melt rates were higher than they expected. This finding means others factors have influence on the melting of the glacier. According to Shuterland, the next step is to identify and to understand these others factors. The getting of accurate information; like Shuterland and his team recolted; could permit the prediction of these mecanisms in the future.  |
 
