--- a/_posts/2019-09-18-article-1/article-1.Rmd
+++ b/_posts/2019-09-18-article-1/article-1.Rmd
@@ -15,6 +15,8 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
+![](/media/sf_shared/projects/killian-verhoeye-blog/_posts/2019-09-18-article-1/images.jpeg)
+
 https://www.scientificamerican.com/article/alarming-sonar-results-show-glaciers-may-be-melting-faster-than-we-expected/
 
 ## Vocabulary 
