--- a/_posts/2019-09-18-article-1/article-1.Rmd
+++ b/_posts/2019-09-18-article-1/article-1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Article 1: Alarming sonar results show glaciers may be melting faster than we expected"
 author:
-    name: Ver Hoeye Killian
+  - name: Ver Hoeye Killian
     url: {} 
 date: 10-17-2019
 Output:
