--- a/_posts/2019-11-12-my-english-activity-log/my-english-activity-log.Rmd
+++ b/_posts/2019-11-12-my-english-activity-log/my-english-activity-log.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 * 09/25/2019-10/02/2019: I watched an episode in English of the series "Sex education" every evening.
 
-* 10/07/2019: I started watching in English "The chilling adventures of Sabrina". I watch this series because it's a remake  of an older series "Sabrina" that I often watched with my sister when we were childs. I think the remake is better.
+* 10/03/2019: I started watching in English "The chilling adventures of Sabrina". I watch this series because it's a remake of an older series "Sabrina" that I often watched with my sister when we were childs. I think the remake is better.
 
 * 10/11/2019: I watched 3 episodes of "The end of the f***ing world" in English with the subtitles in English. I find this series a little bit weird.
 
@@ -27,8 +27,18 @@ knitr::opts_chunk$set(echo = FALSE)
 
 # Applications
 
-* 10/05/2019: I changed the language of my phone from French to English.
+* 09/20/2019: I changed the language of my phone from French to English.
 
 * 10/25/2019: Download of an application about English grammar. 
 
 * Since a long time: I like some scientific pages on Facebook so I often read publications and I listen videos in English.
+
+# Lessons and other things
+
+* 11/16-11/17/2019 : I watched all videos on moodle about the different tenses. 
+
+* 03/06/2020: I red an article about a animal who don't need oxygen to live. 
+
+* 03/08/2020: I studied the vocabulary and the grammar points of the units 7 & 8.
+
+
