--- a/_posts/2019-10-31-article-2/article-2.Rmd
+++ b/_posts/2019-10-31-article-2/article-2.Rmd
@@ -41,10 +41,10 @@ https://www.sciencedaily.com/releases/2019/05/190509142815.htm
 
 |                              |                                                                     |
 | ---------------------------- | ------------------------------------------------------------------- |
-| Researchers                  | Paul J. Taillie : doctoral student of the North Carolina State when the research was conducted. Chris E. Moorman : co-author, NC state professor and coordinator of the Fisheries, Wildlife and Conservation Biology Program. Lyndsey S. Smart. Krishna Pacifici. |
+| Researchers                  | Paul J. Taillie : doctoral student of the North Carolina State when the research was led. Chris E. Moorman : co-author, NC state professor. Lyndsey S. Smart. Krishna Pacifici. |
 | Published in?                | May 09, 2019 |
 | General topic?               | The consequences of sea level rise on coastal forests and on birds that live there. |
-| Procedure/what was examined? | This study was conducted on the Albemarle-Pamlico peninsula in U.S.A. Researchers examined the effect of the the infiltration of saltwater in the ground of forests. Thanks to a sonar they compared two sets of informations about the changes in vegetation during 13 years. Then they modeled the living habits of birds and they understood how much habitats was lost or gained for each bird species. |
-| Conclusions/discovery?       | The scientists found that saltwater is able to kill standing trees. So other plants more salt-resistant such as shrubs and herbaceous plants grow. They discoverd that this process was beneficial for few bird species as the woodpecker because they nest in trre cavity and also for species of high conservation value. But for few other bird species like for instance the hooded warbler this forest's transformation is not good because they usually live in the canopy and the canopy die because of saltwater thus their habitat is reduced. In conclusion, the sea level rise usually appears like a threat of caostal species but this research is the proof that this process can be sometimes beneficial. |
+| Procedure/what was examined? | This study was conducted on the Albemarle-Pamlico peninsula in U.S.A. Researchers examined the effect of the the infiltration of saltwater in the ground of forests. Thanks to a sonar they compared two sets of information about the changes in vegetation for 13 years. Then they modeled the living habits of birds and they understood how much habitats was lost or gained for each bird species. |
+| Conclusions/discovery?       | The scientists found that saltwater is able to kill standing trees. So other plants more salt-resistant such as shrubs and herbaceous plants grow. They discovered that this process was beneficial for few bird species as the woodpecker because they nest in tree cavity and also for species of high conservation value. But for few other bird species like for instance the hooded warbler this forest's transformation is not good because they usually live in the canopy and the canopy die because of saltwater thus their habitat is reduced. In conclusion, the sea level rise usually appears like a threat of caostal species but this research is the proof that this process can be sometimes beneficial. |
 | Remaining questions?         | / |
 
